--- a/index.html
+++ b/index.html
@@ -1,3 +1,17 @@
+<!DOCTYPE html>
+<html>
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>삼각비의 변화 알아보기</title>
+  <link rel="stylesheet" href="styles.css">
+  <script src="script.js" defer></script>
+  <meta name="description" content="페이지 설명">
+  <meta name="keywords" content="HTML, CSS, JavaScript">
+  <meta name="author" content="작성자 이름">
+  <link rel="icon" href="favicon.ico">
 <style>
   body {
     width: 100vw;
@@ -185,7 +199,7 @@
   }
 
 </style>
-
+</head>
 <body>
   <div id="triangles"></div>
   <div id="result">삼각비의 변화를 관찰해보세요!</div>
@@ -296,3 +310,4 @@
     setTri();
   </script>
 </body>
+</html>
