--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
     function setSliderF() {
       HTML("#base-filled").style.width = (T.x - 10) / 290 * 100 + "%";
       HTML("#height-filled").style.width = (T.y - 10) / 290 * 100 + "%";
-      HTML("#angle-progress").value = T.angle;
+      HTML("#angle-progress").value = 90-(T.angle);
     }
 
     setTri();
