--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>삼각비의 변화 알아보기</title>
+  <title>▶삼각비의 변화 알아보기</title>
   <link rel="stylesheet" href="styles.css">
   <script src="script.js" defer></script>
   <meta name="description" content="페이지 설명">
